[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.7.0"
autons = "0.1.0"
evian = "0.2.0"
vexide-async = "0.1.9"
vexide-core = "0.7.0"
vexide-devices = "0.7.0"
vexide-macro = "0.3.2"
vexide-math = "0.1.2"
vexide-motorgroup = "2.0.1"
vexide-panic = "0.1.9"
vexide-startup = "0.4.2"
